# briefkit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  NOTICE.txt  README.md  SAFETY.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: publish.yml  test.yml
EULA/: OFFTRACKMEDIA_EULA_2025.txt
docs/: ci-integration.md  cli-reference.md  color-presets.md  configuration.md  custom-templates.md  custom-variants.md  directory-structure.md  document-ids.md  getting-started.md  perfect-pdf-roadmap.md  presets-guide.md  quick-start.md  templates-guide.md  templates.md  troubleshooting.md  universal-controls.md  variants.md
docs/adr/: 001-argparse-over-click.md  002-four-level-content-hierarchy.md  003-reportlab-pdf-library.md  004-print-over-logging.md  005-closure-based-header-footer.md
docs/tutorials/: novel-to-pdf.md
examples/: README.md
examples/academic-template/: briefkit.yml
examples/basic/: briefkit.yml
examples/book-template/: briefkit.yml
examples/briefing-template/: briefkit.yml
examples/contract-template/: briefkit.yml
examples/corporate/: briefkit.yml
examples/gothic-novel/: .gitignore  README.md  install-fonts.sh  requirements.txt
examples/legal-templates/: briefkit.yml
examples/legal-writing/: briefkit.yml
examples/letter-template/: briefkit.yml
examples/manual-template/: briefkit.yml
examples/minimal-template/: briefkit.yml
examples/minutes-template/: briefkit.yml
examples/novel-template/: briefkit.yml
examples/register-template/: briefkit.yml
examples/report-template/: briefkit.yml
examples/research/: briefkit.yml
examples/workshop-manual-template/: briefkit.yml
src/briefkit/: __init__.py  __main__.py  batch.py  bibliography.py  cli.py  config.py  cross_refs.py  doc_ids.py  extractor.py  (+6 more)
tests/: conftest.py  test_batch.py  test_bibliography.py  test_cli.py  test_config.py  test_cross_refs.py  test_doc_ids.py  test_extractor.py  test_parser.py  test_presets.py  test_quality.py  test_styles.py  test_template_helpers.py  test_templates.py  test_terms.py  test_typography_upgrades.py  test_universal_guard_rails.py  test_variants.py
(+156 files in other folders)
