[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "briefkit"
version = "1.0.0"
description = "Generate professional PDF briefings from markdown. 28 templates, 12 domain variants, 20 color presets. One command. Zero config."
readme = "README.md"
license = {text = "CC-BY-NC-SA-4.0"}
requires-python = ">=3.10"
authors = [{name = "Jay @ OFFTRACKMEDIA Studios"}]
keywords = [
    "pdf", "markdown", "documentation", "briefing", "report",
    "generator", "markdown-to-pdf", "document-generator",
    "technical-writing", "executive-summary", "reportlab",
    "batch-processing", "templates", "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Topic :: Documentation",
    "Topic :: Office/Business",
    "Topic :: Printing",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "reportlab>=4.0,<5",
    "pyyaml>=6.0.1,<7",
    "pillow>=10.0.0,<12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<10", "pytest-cov>=6.0,<8", "pypdf>=5.0,<7", "ruff>=0.8,<1", "pip-audit>=2.0"]

[project.scripts]
briefkit = "briefkit.cli:main"

[project.urls]
Homepage = "https://github.com/otmof-ops/briefkit"
Documentation = "https://github.com/otmof-ops/briefkit/tree/main/docs"
Source = "https://github.com/otmof-ops/briefkit"
Issues = "https://github.com/otmof-ops/briefkit/issues"
Changelog = "https://github.com/otmof-ops/briefkit/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]
